--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.2.0-next.0",
+    "@angular/common": "^20.2.0-next.2",
     "@angular/compiler": "^20.2.0-next.0",
-    "@angular/core": "^20.2.0-next.0",
+    "@angular/core": "^20.2.0-next.2",
     "@angular/forms": "^20.2.0-next.0",
-    "@angular/platform-browser": "^20.2.0-next.0",
+    "@angular/platform-browser": "^20.2.0-next.2",
     "@angular/platform-server": "^20.2.0-next.0",
-    "@angular/router": "^20.2.0-next.0",
+    "@angular/router": "^20.2.0-next.2",
     "@angular/ssr": "^20.2.0-next.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
@@ -41,12 +41,15 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.2"
   }
 }
