--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "@angular/router": "^20.2.0-next.2",
     "@angular/ssr": "^20.2.0-next.1",
     "express": "^5.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "v3": "^0.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular/build": "^20.2.0-next.1",
     "@angular/cli": "^20.2.0-next.1",
     "@angular/compiler-cli": "^20.2.0-next.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
@@ -49,7 +52,21 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2"
-  }
+  },
+  "description": "This project was generated using [Angular CLI](https://github.com/angular/angular-cli) version 20.2.0-next.1.",
+  "main": "tailwind.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/beatrizCi/erp-rental.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/beatrizCi/erp-rental/issues"
+  },
+  "homepage": "https://github.com/beatrizCi/erp-rental#readme"
 }
